k8s/notice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notice-service-dep
#  namespace: poly
  labels:
    app: notice-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notice-service
      tier: backend
  template:
    metadata:
      name: notice-service
      labels:
        app: notice-service
        tier: backend
    spec:
      containers:
        - name: notice-service
          image: docker.io/hyeopgeonlee/msa-notice
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 9002  # 기본 서비스 포트
      restartPolicy: Always
