k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service-dep
  #  namespace: poly
  labels:
    app: ui-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
      tier: backend
  template:
    metadata:
      name: ui-service
      labels:
        app: ui-service
        tier: backend
    spec:
      containers:
        - name: ui-service
          image: docker.io/hyeopgeonlee/msa-ui
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 14000  # 기본 서비스 포트
      restartPolicy: Always
