k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-dep
#  namespace: poly
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
      tier: backend
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
        tier: backend
    spec:
      containers:
        - name: user-service
          image: docker.io/hyeopgeonlee/msa-user
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 9001  # 기본 서비스 포트
      restartPolicy: Always
