k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-svc
  namespace: poly
  labels:
    app: gateway-service
spec:
  selector:
    app: gateway-service
    tier: backend
  ports:
    - protocol: TCP
      port: 13000  # 서비스의 포트
      targetPort: 13000  # 컨테이너에서 사용되는 포트
  type: ClusterIP
  clusterIP: 10.96.1.20  # 고정된 ClusterIP를 설정 (클러스터 내부에서만 유효)
