k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service-svc
  #  namespace: poly
  labels:
    app: ui-service
spec:
  selector:
    app: ui-service
    tier: backend
  ports:
    - protocol: TCP
      port: 14000  # 서비스의 포트
      targetPort: 14000  # 컨테이너에서 사용되는 포트
  type: ClusterIP
